# HelloWorldPersonalGithub1

./: HelloWorldPersonalGithub.sln
MyConsoleApp/: MyConsoleApp.csproj  Program.cs  README.md
hello-world-python-app/: README.md  pyproject.toml  requirements.txt
hello-world-python-app/tests/: test_main.py
maven-project/src/main/java/com/example/: Exercise.java
typescript-project/: package.json
