[tool.poetry]
name = "hello-world-python-app"
version = "0.1.0"
description = "A simple Python application that prints 'Hello World' to the console."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"